welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: not found: value int
  return int((-1+Math.sqrt(1+4*n))/2.0)
         ^golomb:3: error: not found: value n
  return int((-1+Math.sqrt(1+4*n))/2.0)
                               ^