welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = 
{
  return int((-1+Math.sqrt(1+4*n))/2.0)
}